# Household-Power-Consumption-Prediction

./: .gitignore  COMPLETE_GUIDE.md  CONTRIBUTING.md  DELIVERABLES.md  Dockerfile  GITHUB_UPLOAD_GUIDE.md  NEXT_STEPS.md  PROJECT_SETUP_COMPLETE.md  QUICKSTART.md  READINESS_CHECKLIST.md  README.md  START_HERE.md  UPLOAD_INSTRUCTIONS.txt  docker-compose.yml  evaluate_model.py  flask_app.py  mlops_pipeline.py  pyproject.toml  requirements.txt  setup.bat  setup.sh  train_pipeline.py  verify_structure.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci_cd.yml
data/raw/: .gitkeep
models/: .gitkeep
notebooks/: 01_data_exploration.ipynb
src/: __init__.py
src/data/: __init__.py  loader.py  preprocessor.py
src/features/: engineer.py
src/models/: __init__.py  trainer.py
src/utils/: __init__.py  config.py  logger.py
src/visualization/: __init__.py  plotter.py
tests/: conftest.py  test_data.py  test_features.py  test_flask.py  test_models.py
