# Project configuration file
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "household-power-consumption"
version = "1.0.0"
description = "Machine learning project for predicting household power consumption"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Muhammad Farooq", email = "mfarooqshafee333@gmail.com"}
]

keywords = ["machine-learning", "time-series", "power-consumption", "mlops", "flask", "docker"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "Flask>=3.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-flask>=1.2.0",
    "pylint>=2.17.0",
    "black>=23.9.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
    "jupyter>=1.0.0",
    "ipython>=8.14.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-flask>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/Muhammad-Farooq-13/household-power-consumption"
Documentation = "https://github.com/Muhammad-Farooq-13/household-power-consumption/wiki"
Repository = "https://github.com/Muhammad-Farooq-13/household-power-consumption.git"
Issues = "https://github.com/Muhammad-Farooq-13/household-power-consumption/issues"

[tool.setuptools]
packages = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
